# plaud-sync-cli

./: .gitignore  CLAUDE-ADDENDUM.md  CLAUDE.md  CONTRIBUTING.md  DELEGATIONS.md  LICENSE  PROJECT.md  README.md  config.example.json  package.json  pyproject.toml  tsconfig.json
docs/: TESTING-CG-MACBOOK.md  USER-GUIDE.md
plaud_sync/: __init__.py  __main__.py  analyze.py  api.py  cli.py  config.py  hydrator.py  journal.py  normalizer.py  period.py  renderer.py  retry.py  sync.py  tui.py
src/: cli.ts  config.ts  fs-vault-adapter.ts  plaud-api-fetch.ts  plaud-api.ts  plaud-content-hydrator.ts  plaud-normalizer.ts  plaud-renderer.ts  plaud-retry.ts  plaud-sync.ts  plaud-vault.ts  settings-schema.ts  state.ts  sync-runtime.ts
templates/: action-items.md  default.md  executive-summary.md
test/: config.test.ts  plaud-api.test.ts  plaud-content-hydrator.test.ts  plaud-normalizer.test.ts  plaud-renderer.test.ts  plaud-retry.test.ts  plaud-sync.test.ts  plaud-vault.test.ts  settings-schema.test.ts  test_analyze.py  test_api.py  test_config.py  test_hydrator.py  test_journal.py  test_journal_cli.py  test_normalizer.py  test_period.py  test_renderer.py  test_retry.py  test_sync.py  test_templates.py  test_tui.py
